# C-Programming

./: .gitignore  CMakeLists.txt  Loop.s  README.md  dataType.cpp  loop.cpp
C++/: DataType.c  Loop.c  conditional.cpp  fucntion.cpp
Fuction/: Fuction  FunParamNoReturn.c  Introduction.c  README.md
OOP/: BankAccount.cpp  BasicObject.cpp  Encapsulation.cpp  FunctionOverloading.cpp  Inheritance.cpp  README.md
Temp/: Operator  Operator.c  a  arr  array.c  dd  dowhil.c  f  findsam  for.c  l  loop  loop.c  main  main.c  main.s
src/: main.cpp
